# twothings

./: .coveragerc  .gitignore  README.md  README.rst  pyproject.toml  setup.py
scripts/: install-calendar-sync.sh  unittests
test/: test_calendar_sync.py
twothings/: cli.py
twothings/assests/systemd/: twothings-calendar-sync.service  twothings-calendar-sync.timer
twothings/calendar/: log.py  sync.py
twothings/util/: smtp.py
