[metadata]
name = 'twothings'
version = '0.0.1'
description = 'You want me to do two things?'
author = 'John Andersen'
author_email = 'johnandersenpdx@gmail.com'
license = 'MIT/Apache-2.0'
url = 'https://github.com/pdxjohnny/twothings'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
